Fixed newtab issue, now it always opens a NEW new tab

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 		    	<a href="#about">About</a><br>
 		    	<a href="#engineering-experience">Engineering Experience</a><br>
 		    	<a href="#music">Music</a><br>
-		    	<a href="http://www.linkedin.com/in/sampritraihan" target="_newtab">LinkedIn</a><br>
-		    	<a href="https://github.com/shirsho" target="_newtab">Github</a><br>
-		    	<a href="https://twitter.com/SampritRaihan" target="_newtab">Twitter</a><br>
+		    	<a href="http://www.linkedin.com/in/sampritraihan" target="_blank">LinkedIn</a><br>
+		    	<a href="https://github.com/shirsho" target="_blank">Github</a><br>
+		    	<a href="https://twitter.com/SampritRaihan" target="_blank">Twitter</a><br>
 		    
 	    	</h3>
 	    </div>
@@ -49,7 +49,7 @@
 		<div id="about">
 			<h3>About</h3>
 			<p>
-				I am going into my final year of Computer Engineering at the <a href="http://www.utoronto.ca/"> University of Toronto </a>, and will graduate in June 2015. <br>
+				I am going into my final year of Computer Engineering at the <a href="http://www.utoronto.ca/" target="_blank"> University of Toronto </a>, and will graduate in June 2015. <br>
 				I like to build software, make music, hit the gym, and stare at maps. I also like to cook, but that's a basic survival skill, right? <br>
 			</p>
 		</div>
@@ -65,12 +65,12 @@
 				Music is undoubtedly my biggest passion, and one of the very few things that I enjoy without the expectation of a reward.
 			</p>
 			<p>
-				I am a multi-instrumentalist/songwriter/producer and I handle the entire instrumental section of my latest musical endeavor, <a href="https://www.facebook.com/transcendworld" target="_newtab"> Transcend</a>, a post rock duo that features my old bandmate Sifat Hasan.
+				I am a multi-instrumentalist/songwriter/producer and I handle the entire instrumental section of my latest musical endeavor, <a href="https://www.facebook.com/transcendworld" target="_blank"> Transcend</a>, a post rock duo that features my old bandmate Sifat Hasan.
 			</p>
 			<iframe style="border: 0; width: 100%; height: 470px;" src="http://bandcamp.com/EmbeddedPlayer/track=496742491/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://transcendworld.bandcamp.com/track/worth-your-while">Worth Your While by Transcend</a></iframe>
 
 			<p>
-				Back in my high school days, I was also deeply involved with <a href="https://www.facebook.com/absentelementband" target="_newtab">Absent Element</a>, an experimental rock band from Dhaka, Bangladesh, where I participated in the capacity of a guitar player, songwriter, composer and lyricist.
+				Back in my high school days, I was also deeply involved with <a href="https://www.facebook.com/absentelementband" target="_blank">Absent Element</a>, an experimental rock band from Dhaka, Bangladesh, where I participated in the capacity of a guitar player, songwriter, composer and lyricist.
 			</p>
 			<p>
 				We released two singles Pichutaan and Oprotiroddho in the compilation albums Aashor and Rock 505, released under Gaanchil and G-Series, two of the largest record labels in the country.
@@ -79,7 +79,7 @@
 			<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/24002259&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 
 			<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/13622667&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-			
+
 		</div>
 	</section>
 	</div>
