Added scrolling animation for about, engineering experience and music

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<link rel="stylesheet" href="stylesheets/pygment_trac.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script src="javascripts/respond.js"></script>
+
+		<script src="javascripts/myJavascript.js"></script>
 		<!--[if lt IE 9]>
 		  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -34,9 +36,9 @@
 
 	    <div id="contents">
 	    	<h3>
-		    	<a href="#about">About</a><br>
-		    	<a href="#engineering-experience">Engineering Experience</a><br>
-		    	<a href="#music">Music</a><br>
+		    	<a href="#about" onclick="goToAbout();">About</a><br>
+		    	<a href="#engineering-experience" onclick="goToEngineeringExperience();">Engineering Experience</a><br>
+		    	<a href="#music" onclick="goToMusic();">Music</a><br>
 		    	<a href="http://www.linkedin.com/in/sampritraihan" target="_blank">LinkedIn</a><br>
 		    	<a href="https://github.com/shirsho" target="_blank">Github</a><br>
 		    	<a href="https://twitter.com/SampritRaihan" target="_blank">Twitter</a><br>
