Fixed page reload onclick issue

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 	    <div id="contents">
 	    	<h3>
-		    	<a href="#about" onclick="goToAbout();">About</a><br>
-		    	<a href="#engineering-experience" onclick="goToEngineeringExperience();">Engineering Experience</a><br>
-		    	<a href="#music" onclick="goToMusic();">Music</a><br>
+		    	<a href="#about" onclick="goToAbout(); return false;">About</a><br>
+		    	<a href="#engineering-experience" onclick="goToEngineeringExperience(); return false;">Engineering Experience</a><br>
+		    	<a href="#music" onclick="goToMusic(); return false;">Music</a><br>
 		    	<a href="http://www.linkedin.com/in/sampritraihan" target="_blank">LinkedIn</a><br>
 		    	<a href="https://github.com/shirsho" target="_blank">Github</a><br>
 		    	<a href="https://twitter.com/SampritRaihan" target="_blank">Twitter</a><br>
