Changed wrapper class, a little tilted to left, reduced size of bandcamp iframe

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	</head>
 	<body>
-    <div class="wrapper">
+    <div class="automargin">
     <section>
         <div id="title">
 			<h1>SAMPRIT RAIHAN</h1>
@@ -117,8 +117,11 @@
 			<p>
 				I am a multi-instrumentalist/songwriter/producer and I handle the entire instrumental section of my latest musical endeavor, <a href="https://www.facebook.com/transcendworld" target="_blank"> Transcend</a>, a post rock duo that features my old bandmate Sifat Hasan.
 			</p>
-			<iframe style="border: 0; width: 100%; height: 470px;" src="http://bandcamp.com/EmbeddedPlayer/track=496742491/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://transcendworld.bandcamp.com/track/worth-your-while">Worth Your While by Transcend</a></iframe>
-
+			<div id="bandcamp">
+				<iframe style="border: 0; width: 100%; height: 470px;" src="http://bandcamp.com/EmbeddedPlayer/track=496742491/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://transcendworld.bandcamp.com/track/worth-your-while">Worth Your While by Transcend</a></iframe>
+	
+			</div>
+			
 			<p>
 				Back in my high school days, I was also deeply involved with <a href="https://www.facebook.com/absentelementband" target="_blank">Absent Element</a>, an experimental rock band from Dhaka, Bangladesh, where I participated in the capacity of a guitar player, songwriter, composer and lyricist.
 			</p>
@@ -132,7 +135,7 @@
 			</div>
 		</div>
 	</section>
-	</div>
+	</div-->
     
 	</body>
 </html>
