--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
     	<div id="title-and-contents">
 	    	<div id="title">
 				<h1 class="myh1">SAMPRIT RAIHAN</h1>
-				<h2 class="myh2">
-					Engineer <span class="bullet"> • </span> 
-					Musician <span class="bullet"> • </span>
-					Fitness Enthusiast <span class="bullet"> • </span>
-					Cook
-				</h2>				
 	    	</div>
 
 	    	<br>
@@ -64,18 +58,8 @@
 		    	</h3>
 		    </div>
        	</div>
-       	<div id="about">
-			<h4 class="myh4">About</h4>
-			<div id="description">
-			<p class="mypara">
-				I am going into my final year of Computer Engineering at the <a href="http://www.utoronto.ca/" target="_blank"> University of Toronto </a>, and will graduate in June 2015. <br>
-				I like to build software, make music, hit the gym, and stare at maps. I also like to cook, but that's a basic survival skill, right? <br>
-			</p>	
-			</div>
-			
-		</div>
 		<div id="engineering-experience">
-			<h4 class="myh4">Engineering Experience</h4>
+			<h4 class="myh4">Engineering Experience</h4>'
 			<div id="ibm-build-engineer">
 				<div class="company-logo" id="ibm-logo1">
 					<img src="http://jeffbullas.files.wordpress.com/2010/02/ibm-logo.jpg" alt="IBM" width="200" height="120">
@@ -202,31 +186,6 @@
 		</div>
 		<br>
 		
-		<div id="music">
-			<h4 class="myh4">Music</h4>
-			<div id="music-description">
-			<p class="mypara">			
-				Music is undoubtedly my biggest passion, and one of the very few things that I enjoy without the expectation of a reward.
-			</p>
-			<p class="mypara">
-				I am a multi-instrumentalist/songwriter/producer and I handle the entire instrumental section of my latest musical endeavor, <a href="https://www.facebook.com/transcendworld" target="_blank"> Transcend</a>, a post rock duo that features my old bandmate Sifat Hasan.
-			</p class="mypara">
-			<div id="bandcamp">
-				<iframe style="border: 0; width: 100%; height: 470px;" src="http://bandcamp.com/EmbeddedPlayer/track=496742491/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://transcendworld.bandcamp.com/track/worth-your-while">Worth Your While by Transcend</a></iframe>	
-			</div>
-			
-			<p class="mypara">
-				Back in my high school days, I was also deeply involved with <a href="https://www.facebook.com/absentelementband" target="_blank">Absent Element</a>, an experimental rock band from Dhaka, Bangladesh, where I participated in the capacity of a guitar player, songwriter, composer and lyricist.
-			</p>
-			<p class="mypara">
-				We released two singles Pichutaan and Oprotiroddho in the compilation albums Aashor and Rock 505, released under Gaanchil and G-Series, two of the largest record labels in the country.
-			</p>
-
-			<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/24002259&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-
-			<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/13622667&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-			</div>
-		</div>
 	<!--/section-->
 	</div>
     
